--- a/app/src/main/res/layout/cafedra_me.xml
+++ b/app/src/main/res/layout/cafedra_me.xml
@@ -17,7 +17,7 @@
             android:id="@+id/headerLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#FFFFFF"
+            android:background="@color/header_footer_light"
             android:padding="16dp"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -36,7 +36,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="Многоканальная электросвязь"
-                android:textColor="@android:color/black"
+                android:textColor="@color/text_light"
                 android:textSize="20sp"
                 android:maxLines="2"
                 android:ellipsize="end"
@@ -55,12 +55,14 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:descendantFocusability="blocksDescendants"
+            android:background="@color/background_light"
             app:layout_constraintTop_toBottomOf="@id/headerLayout"
             app:layout_constraintBottom_toTopOf="@id/footerLayout">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/background_light"
                 android:orientation="vertical"
                 android:padding="16dp">
 
@@ -70,7 +72,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Кафедра существует с момента образования учебного заведения. Основное направление работы кафедры – подготовка специалистов по технической эксплуатации оптических и электрических телекоммуникационных систем, которые в настоящее время, являются платформой построения всех звеньев Единой сети электросвязи Российской федерации.\n"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/text_light"
                     android:textSize="16sp"
                     android:lineSpacingExtra="4dp"
                     tools:ignore="HardcodedText,VisualLintLongText" />
@@ -82,7 +84,7 @@
                     android:text="Кафедра осуществляет подготовку по направлению «Инфокоммуникационные технологии и системы связи» (бакалавриат), профили «Транспортные сети и системы связи», «Технологии и системы оптической связи», «Инфокоммуникационные сети и системы» (11.03.02), магистратура направленности «Сети, системы и устройства телекоммуникаций»(11.04.02).
 При кафедре организована цикловая комиссия многоканальных телекоммуникационных систем, где производится подготовка специалистов среднего специального образования по специальности «Инфокоммуникационные сети и системы связи» (11.02.15).
 На кафедре работают опытные высококвалифицированные преподаватели. В составе профессорско-преподавательского состава кафедры – 3 кандидата наук. Преподавание ведётся с использованием мультимедийного оборудования, что позволяет значительно повысить глубину понимания и наглядность учебного материала.\n"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/text_light"
                     android:textSize="16sp"
                     android:lineSpacingExtra="4dp"
                     tools:ignore="HardcodedText" />
@@ -92,7 +94,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Состав кафедры:\n"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/text_light"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:lineSpacingExtra="4dp"
@@ -114,7 +116,7 @@
 \nПермяков Евгений Борисович, преподаватель цикловой комиссии многоканальных телекоммуникационных систем;
 \nЛунев Александр Владимирович, преподаватель цикловой комиссии многоканальных телекоммуникационных систем;
 \nБелых Павел Евгеньевич – заведующий лабораториями кафедры;\n"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/text_light"
                     android:textSize="16sp"
                     android:lineSpacingExtra="4dp"
                     tools:ignore="HardcodedText" />
@@ -124,7 +126,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Научная деятельность кафедры\n"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/text_light"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:lineSpacingExtra="4dp"
@@ -148,7 +150,7 @@
 \n-внедрение технологических ресурсов в учебный процесс;
 \nНа кафедре организована студенческая научная работа, охватывающая практически все современные цифровые телекоммуникационные технологии.
 Ежегодно проводятся студенческие научно-практические конференции.\n"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/text_light"
                     android:textSize="16sp"
                     android:lineSpacingExtra="4dp"
                     tools:ignore="HardcodedText,VisualLintLongText" />
@@ -158,7 +160,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Лабораторная база"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/text_light"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:lineSpacingExtra="4dp"
@@ -170,7 +172,7 @@
                     android:layout_height="wrap_content"
                     android:text="Для организации учебного процесса кафедра располагает мощной лабораторной базой, оснащенной современными лабораторными установками, компьютерными классами, системами передачи, измерительной техникой отечественных и зарубежных производителей. В лабораториях установлены системы, используемые операторами на реальных сетях связи. На кафедре организованы лаборатории «Сети доступа архитектуры FTTx», «Транспортные сети и системы связи», «Системы с волновым спектральным мультиплексированием», «Системы комплексной безопасности», «Метрология, стандартизация и сертификация в отрасли инфокоммуникаций», «Методы и средства измерений в телекомуникационных системах», «Аппаратура и сети доступа», «Направляющие системы электросвязи», «Сети связи и системы коммутации».
 \nИмеющееся лабораторное оборудование используется не только в учебном процессе, но и при проведении научных исследований магистрантами и аспирантами.\n"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/text_light"
                     android:textSize="16sp"
                     android:lineSpacingExtra="4dp"
                     tools:ignore="HardcodedText,VisualLintLongText" />
@@ -180,7 +182,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Востребованность выпускников"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/text_light"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:lineSpacingExtra="4dp"
@@ -191,7 +193,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Все выпускники на сегодняшний день востребованы на рынке труда ведущими операторами связи: ПАО «Ростелеком», ПАО «МТС», ООО «ТТК», ПАО «Вымпелком» (Билайн), ООО «Мобифон-2000» (Мотив). Кроме этого выпускники работают в многочисленных телекоммуникационных компаниях Интернет-провайдерах, в составе государственных структур - ФСБ, ФСО, Министерство обороны. Не обходятся без выпускников кафедры предприятия, обеспечивающие законченный цикл производства и имеющие свои сети технологической связи, такие как: ПАО «Газпром», НК «Роснефть», ПАО «Россети», ОАО «РЖД».\n"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/text_light"
                     android:textSize="16sp"
                     android:lineSpacingExtra="4dp"
                     tools:ignore="HardcodedText,VisualLintLongText" />
@@ -204,14 +206,15 @@
             android:id="@+id/footerLayout"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:background="#FFFFFF"
+            android:background="@color/header_footer_light"
             app:layout_constraintBottom_toBottomOf="parent">
 
             <ImageView
                 android:id="@+id/icon1"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_home"
+                android:src="@drawable/ic_home1"
+                app:tint="@color/text_light"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/icon2"
                 app:layout_constraintStart_toStartOf="parent"
@@ -224,7 +227,8 @@
                 android:id="@+id/icon2"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_calendar"
+                android:src="@drawable/ic_calendar1"
+                app:tint="@color/text_light"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/icon3"
                 app:layout_constraintStart_toEndOf="@+id/icon1"
@@ -236,7 +240,8 @@
                 android:id="@+id/icon3"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_map"
+                android:src="@drawable/ic_map1"
+                app:tint="@color/text_light"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/icon4"
                 app:layout_constraintStart_toEndOf="@+id/icon2"
@@ -248,7 +253,8 @@
                 android:id="@+id/icon4"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_settings"
+                android:src="@drawable/ic_settings1"
+                app:tint="@color/text_light"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/icon3"
