--- a/app/src/main/res/layout/education_bac2.xml
+++ b/app/src/main/res/layout/education_bac2.xml
@@ -17,7 +17,7 @@
             android:id="@+id/headerLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#FFFFFF"
+            android:background="@color/header_footer_light"
             android:padding="16dp"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -36,7 +36,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="Инфокоммуникационные технологии в услугах связи"
-                android:textColor="@android:color/black"
+                android:textColor="@color/text_light"
                 android:textSize="20sp"
                 android:maxLines="2"
                 android:ellipsize="end"
@@ -56,12 +56,14 @@
             android:layout_height="0dp"
             android:descendantFocusability="blocksDescendants"
             app:layout_constraintTop_toBottomOf="@id/headerLayout"
+            android:background="@color/background_light"
             app:layout_constraintBottom_toTopOf="@id/footerLayout">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:background="@color/background_light"
                 android:padding="16dp">
 
                 <!-- Текстовые поля -->
@@ -75,7 +77,7 @@
 \nСтуденты данного профиля по окончании обучения должны знать приоритетные направления развития информационно-коммуникационных технологий связи, в том числе, автоматизацию бизнес-процессов при цифровой трансформации организаций, современную программно-конфигурируемую информационную систему передачи, предоставляющим широкий спектр информационных и аналитических сервисов на базе облачные платформ таких как: PaaS (Platform as a Service); IaaS (Infrastructure as a Service); SaaS (Software as a Service), архитектуру и протоколы мультисервисных сетей, беспроводных сетей и их услуги, методы и средства сетевой безопасности и защиты информации в современных информационно-телекоммуникационных сетях и услугах, администрирование в инфокоммуникационных системах, настройку сетевых операционных систем, планирование и проектирование сетей и услуг связи, проектирование серверной части приложения баз данных, создание и управление масштабируемым веб-сайтом и приложениями, современные коммутационные платформы, сервисные возможности современных учрежденческих коммуникационных систем, настройку коммуникационного оборудования, проектирование сетей связи.
 \n
 \n Выпускники института, обучающиеся по профилю «Инфокоммуникационные технологии в услугах связи» будут востребованы у всех крупных операторов сотовой связи, операторов, предоставляющих магистральные каналы (ПАО Ростелеком и др.) и у всех других операторов, предоставляющих населению услуги инфокоммуникаций.\n"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/text_light"
                     android:textSize="16sp"
                     android:lineSpacingExtra="4dp"
                     tools:ignore="HardcodedText,VisualLintLongText" />
@@ -85,7 +87,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Основные виды деятельности: Разработка и эксплуатация сервисов и услуг связи инфокоммуникационных сетей и систем:\n"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/text_light"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:lineSpacingExtra="4dp"
@@ -101,7 +103,7 @@
 \n- Пусконаладка современного телекоммуникационного оборудования различных фирм производителей;
 \n- Эксплуатация оконечного оборудования телекоммуникационных сетей и систем;
 \n- Обеспечение безопасности хранения и передачи информации в телекоммуникационных сетях.\n"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/text_light"
                     android:textSize="16sp"
                     android:lineSpacingExtra="4dp"
                     tools:ignore="HardcodedText,VisualLintLongText" />
@@ -111,7 +113,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Области профессиональной деятельности и (или) сферы профессиональной деятельности:"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/text_light"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:lineSpacingExtra="4dp"
@@ -125,7 +127,7 @@
 \n- Специалист по радиосвязи и телекоммуникациям;
 \n- Инженер-проектировщик в области связи (телекоммуникаций);
 \n- Системный администратор информационно-коммуникационных систем.\n"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/text_light"
                     android:textSize="16sp"
                     android:lineSpacingExtra="4dp"
                     tools:ignore="HardcodedText" />
@@ -139,7 +141,7 @@
 \n Имеющееся лабораторное оборудование используется не только в учебном процессе, но и при проведении научно-исследовательских работ магистрантами и аспирантами. На кафедре организована студенческая научная работа, охватывающая практически все современные цифровые телекоммуникационные технологии. Ежегодно проводятся студенческие научно-практические конференции.
 \n Институт имеет устойчивые связи с телекоммуникационными компаниями Уральского федерального округа, научными и проектными организациями. Предприятиями отрасли связи и массовых коммуникаций. Студенты проходят практику на предприятиях отрасли связи, с которыми заключены договора на прохождение производственной и преддипломной практики: ПАО «Ростелеком» Екатеринбургский филиал ООО, «ПО Промсвязь», ПАО «Ростелеком» Екатеринбургский районный узел связи Екатеринбургского филиала, ФГУП НПО «Автоматика», ПАО «Ростелеком» Курганский филиал, ПАО «Ростелеком» Пермский филиал, Управление специальной связи и информации ФСО России в УрФО, Министерство обороны, ГУ МВД по Свердловской области, ОАО «МТС», Макро-регион «Урал», ОАО «Мегафон», УФ ЗАО «КОМСТАР-Регионы», Уральский филиал ООО «Екатеринбург-2000», ООО «Стройэнергосвязь», ЗАО «Урал-ТрансТелеком», ПО «Западные электрические сети» филиал ОАО «МРСК-Урала», ОАО «Областное телевидение», ЗАО «ЭР-Телеком Холдинг», ОАО «ОблТВ», ООО «УГМК-Телеком», ОАО «МТС» и другие.
 \n В институте имеются авторизованные учебные центры ЗАО «Связьстройдеталь», Компания «3М Россия», «D-Link», студенты могут дополнительно пройти курсы повышения квалификации по данным направлениям, что повышаете их конкурентноспособность на рынке труда.\n"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/text_light"
                     android:textSize="16sp"
                     android:lineSpacingExtra="4dp"
                     tools:ignore="HardcodedText,VisualLintLongText" />
@@ -149,7 +151,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Востребованность выпускников:"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/text_light"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:lineSpacingExtra="4dp"
@@ -161,7 +163,7 @@
                     android:layout_height="wrap_content"
                     android:text="Заявки на выпускников превышают количество студентов выпускных курсов.
 \nВсе выпускники востребованы на рынке труда ведущими операторами связи: ПАО 'Ростелеком', ПАО 'МТС', ООО 'ТТК', ПАО 'Вымпелком' (Билайн), ООО 'Мобифон-2000' (Мотив). Кроме этого выпускники работают в многочисленных телекоммуникационных компаниях - интернет провайдерах, а также в составе государственных структур - ФСБ, ФСО, Министерство обороны.\n"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/text_light"
                     android:textSize="16sp"
                     android:lineSpacingExtra="4dp"
                     tools:ignore="HardcodedText,VisualLintLongText" />
@@ -171,7 +173,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Возможности продолжения образования выпускника:"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/text_light"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:lineSpacingExtra="4dp"
@@ -182,7 +184,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Выпускник может продолжить обучение в институте связи для получения высшего образования (магистратура) по направлению 11.04.02 «Инфокоммуникационные технологии и системы связи» и в аспирантуре по направлению 11.06.01 «Электроника, радиотехника и системы связи»\n"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/text_light"
                     android:textSize="16sp"
                     android:lineSpacingExtra="4dp"
                     tools:ignore="HardcodedText,VisualLintLongText" />
@@ -196,14 +198,15 @@
             android:id="@+id/footerLayout"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:background="#FFFFFF"
+            android:background="@color/header_footer_light"
             app:layout_constraintBottom_toBottomOf="parent">
 
             <ImageView
                 android:id="@+id/icon1"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_home"
+                android:src="@drawable/ic_home1"
+                app:tint="@color/text_light"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/icon2"
                 app:layout_constraintStart_toStartOf="parent"
@@ -216,7 +219,8 @@
                 android:id="@+id/icon2"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_calendar"
+                android:src="@drawable/ic_calendar1"
+                app:tint="@color/text_light"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/icon3"
                 app:layout_constraintStart_toEndOf="@+id/icon1"
@@ -228,7 +232,8 @@
                 android:id="@+id/icon3"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_map"
+                android:src="@drawable/ic_map1"
+                app:tint="@color/text_light"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/icon4"
                 app:layout_constraintStart_toEndOf="@+id/icon2"
@@ -240,7 +245,8 @@
                 android:id="@+id/icon4"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_settings"
+                android:src="@drawable/ic_settings1"
+                app:tint="@color/text_light"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/icon3"
