--- a/app/src/main/res/layout/main_cafedra.xml
+++ b/app/src/main/res/layout/main_cafedra.xml
@@ -16,7 +16,7 @@
             android:id="@+id/headerLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#FFFFFF"
+            android:background="@color/header_footer_light"
             android:padding="16dp"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -35,7 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Кафедры"
-                android:textColor="@android:color/black"
+                android:textColor="@color/text_light"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -51,6 +51,7 @@
             android:layout_height="0dp"
             android:clipToPadding="false"
             android:paddingBottom="24dp"
+            android:background="@color/background_light"
             android:descendantFocusability="blocksDescendants"
             app:layout_constraintTop_toBottomOf="@id/headerLayout"
             app:layout_constraintBottom_toTopOf="@id/footerLayout">
@@ -59,6 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:background="@color/background_light"
                 android:padding="16dp">
 
                 <!-- Карточка Многоканальная электросвязь -->
@@ -69,6 +71,7 @@
                     android:layout_margin="16dp"
                     app:cardCornerRadius="8dp"
                     app:cardElevation="4dp"
+                    app:cardBackgroundColor="@color/card_light"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent">
 
@@ -99,7 +102,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:text="Многоканальная электросвязь"
-                            android:textColor="@android:color/black"
+                            android:textColor="@color/text_light"
                             android:textSize="16sp"
                             android:padding="16dp"
                             tools:ignore="HardcodedText" />
@@ -114,6 +117,7 @@
                     android:layout_margin="16dp"
                     app:cardCornerRadius="8dp"
                     app:cardElevation="4dp"
+                    app:cardBackgroundColor="@color/card_light"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent">
 
@@ -144,7 +148,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:text="Инфокоммуникационных технологий и мобильной связи"
-                            android:textColor="@android:color/black"
+                            android:textColor="@color/text_light"
                             android:textSize="16sp"
                             android:padding="16dp"
                             tools:ignore="HardcodedText" />
@@ -159,6 +163,7 @@
                     android:layout_margin="16dp"
                     app:cardCornerRadius="8dp"
                     app:cardElevation="4dp"
+                    app:cardBackgroundColor="@color/card_light"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent">
 
@@ -190,7 +195,7 @@
                             android:gravity="center"
                             android:padding="16dp"
                             android:text="Высшей математики и физики"
-                            android:textColor="@android:color/black"
+                            android:textColor="@color/text_light"
                             android:textSize="16sp"
                             tools:ignore="HardcodedText" />
                     </LinearLayout>
@@ -204,6 +209,7 @@
                     android:layout_margin="16dp"
                     app:cardCornerRadius="8dp"
                     app:cardElevation="4dp"
+                    app:cardBackgroundColor="@color/card_light"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent">
 
@@ -234,7 +240,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:text="Информационных систем и технологий"
-                            android:textColor="@android:color/black"
+                            android:textColor="@color/text_light"
                             android:textSize="16sp"
                             android:padding="16dp"
                             tools:ignore="HardcodedText" />
@@ -249,6 +255,7 @@
                     android:layout_margin="16dp"
                     app:cardCornerRadius="8dp"
                     app:cardElevation="4dp"
+                    app:cardBackgroundColor="@color/card_light"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent">
 
@@ -279,7 +286,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:text="Экономики связи"
-                            android:textColor="@android:color/black"
+                            android:textColor="@color/text_light"
                             android:textSize="16sp"
                             android:padding="16dp"
                             tools:ignore="HardcodedText" />
@@ -296,14 +303,15 @@
             android:id="@+id/footerLayout"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:background="#FFFFFF"
+            android:background="@color/header_footer_light"
             app:layout_constraintBottom_toBottomOf="parent">
 
             <ImageView
                 android:id="@+id/icon1"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_home"
+                android:src="@drawable/ic_home1"
+                app:tint="@color/text_light"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/icon2"
                 app:layout_constraintStart_toStartOf="parent"
@@ -316,7 +324,8 @@
                 android:id="@+id/icon2"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_calendar"
+                android:src="@drawable/ic_calendar1"
+                app:tint="@color/text_light"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/icon3"
                 app:layout_constraintStart_toEndOf="@+id/icon1"
@@ -328,7 +337,8 @@
                 android:id="@+id/icon3"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_map"
+                android:src="@drawable/ic_map1"
+                app:tint="@color/text_light"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/icon4"
                 app:layout_constraintStart_toEndOf="@+id/icon2"
@@ -340,7 +350,8 @@
                 android:id="@+id/icon4"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_settings"
+                android:src="@drawable/ic_settings1"
+                app:tint="@color/text_light"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/icon3"
