--- a/app/src/main/res/layout/main_facts.xml
+++ b/app/src/main/res/layout/main_facts.xml
@@ -17,7 +17,7 @@
             android:id="@+id/headerLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#FFFFFF"
+            android:background="@color/header_footer_light"
             android:padding="16dp"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -36,7 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/facts"
-                android:textColor="@android:color/black"
+                android:textColor="@color/text_light"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -50,6 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:descendantFocusability="blocksDescendants"
+            android:background="@color/background_light"
             app:layout_constraintTop_toBottomOf="@id/headerLayout"
             app:layout_constraintBottom_toTopOf="@id/footerLayout">
 
@@ -57,6 +58,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:background="@color/background_light"
                 android:padding="16dp">
 
                 <!--1 факт -->
@@ -74,7 +76,7 @@
                         android:text="Факт 1"
                         android:textStyle="bold"
                         android:textSize="16sp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/text_light"
                         tools:ignore="HardcodedText" />
 
                     <TextView
@@ -83,7 +85,7 @@
                         android:text="УрТИСИ снован в 1930 году.
 \nИзначально учреждение было открыто как техникум связи в Свердловске. В 1998 году на его базе был создан филиал СибГУТИ в Екатеринбурге — УрТИСИ."
                         android:textSize="14sp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/text_light"
                         android:paddingTop="4dp"
                         tools:ignore="HardcodedText,VisualLintLongText" />
                 </LinearLayout>
@@ -104,7 +106,7 @@
                         android:text="Факт 2"
                         android:textStyle="bold"
                         android:textSize="16sp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/text_light"
                         tools:ignore="HardcodedText" />
 
                     <TextView
@@ -113,7 +115,7 @@
                         android:text="Подведомственен Минцифры России.
 \nУрТИСИ СибГУТИ является филиалом Сибирского государственного университета телекоммуникаций и информатики и находится под управлением Министерства цифрового развития, связи и массовых коммуникаций РФ."
                         android:textSize="14sp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/text_light"
                         android:paddingTop="4dp"
                         tools:ignore="HardcodedText,VisualLintLongText" />
                 </LinearLayout>
@@ -133,7 +135,7 @@
                         android:text="Факт 3"
                         android:textStyle="bold"
                         android:textSize="16sp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/text_light"
                         tools:ignore="HardcodedText" />
 
                     <TextView
@@ -142,7 +144,7 @@
                         android:text="Более 34 000 выпускников со средним профессиональным образованием.
 \nЗа 90 лет своей истории институт подготовил 34 084 выпускника со средним профессиональным образованием."
                         android:textSize="14sp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/text_light"
                         android:paddingTop="4dp"
                         tools:ignore="HardcodedText,VisualLintLongText" />
                 </LinearLayout>
@@ -163,7 +165,7 @@
                         android:text="Факт 4"
                         android:textStyle="bold"
                         android:textSize="16sp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/text_light"
                         tools:ignore="HardcodedText" />
 
                     <TextView
@@ -172,7 +174,7 @@
                         android:text="Современная электронная образовательная среда.
 \nВ УрТИСИ создана и развивается единая научно-образовательная электронная среда на базе широкополосной мультисервисной сети связи."
                         android:textSize="14sp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/text_light"
                         android:paddingTop="4dp"
                         tools:ignore="HardcodedText,VisualLintLongText" />
                 </LinearLayout>
@@ -193,7 +195,7 @@
                         android:text="Факт 5"
                         android:textStyle="bold"
                         android:textSize="16sp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/text_light"
                         tools:ignore="HardcodedText" />
 
                     <TextView
@@ -202,7 +204,7 @@
                         android:text="Активное сотрудничество с ИТ-компаниями.
 \nИнститут активно сотрудничает с ИТ-компаниями, такими как «НАГ», «D-Link», для подготовки высококвалифицированных ИТ-кадров."
                         android:textSize="14sp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/text_light"
                         android:paddingTop="4dp"
                         tools:ignore="HardcodedText,VisualLintLongText" />
                 </LinearLayout>
@@ -222,7 +224,7 @@
                         android:text="Факт 6"
                         android:textStyle="bold"
                         android:textSize="16sp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/text_light"
                         tools:ignore="HardcodedText" />
 
                     <TextView
@@ -231,7 +233,7 @@
                         android:text="УрТИСИ участвует в проекте «Цифровая кафедра».
 \nИнститут является участником федеральной программы «Цифровые кафедры», где студенты могут пройти бесплатное обучение по цифровым компетенциям."
                         android:textSize="14sp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/text_light"
                         android:paddingTop="4dp"
                         tools:ignore="HardcodedText,VisualLintLongText" />
                 </LinearLayout>
@@ -251,7 +253,7 @@
                         android:text="Факт 7"
                         android:textStyle="bold"
                         android:textSize="16sp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/text_light"
                         tools:ignore="HardcodedText" />
 
                     <TextView
@@ -260,7 +262,7 @@
                         android:text="Проводятся хакатоны, олимпиады и профориентационные мероприятия.
 \nВ УрТИСИ регулярно проходят мероприятия по программированию, информационной безопасности и цифровым технологиям."
                         android:textSize="14sp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/text_light"
                         android:paddingTop="4dp"
                         tools:ignore="HardcodedText,VisualLintLongText" />
                 </LinearLayout>
@@ -280,7 +282,7 @@
                         android:text="Факт 8"
                         android:textStyle="bold"
                         android:textSize="16sp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/text_light"
                         tools:ignore="HardcodedText" />
 
                     <TextView
@@ -289,7 +291,7 @@
                         android:text="Активная студенческая жизнь.
 \nВолонтёрские движения, клубы, мероприятия, КВН, спортивные секции."
                         android:textSize="14sp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/text_light"
                         android:paddingTop="4dp"
                         tools:ignore="HardcodedText,VisualLintLongText" />
                 </LinearLayout>
@@ -309,7 +311,7 @@
                         android:text="Факт 9"
                         android:textStyle="bold"
                         android:textSize="16sp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/text_light"
                         tools:ignore="HardcodedText" />
 
                     <TextView
@@ -318,7 +320,7 @@
                         android:text="90+ квалифицированных преподавателей.
 \nСреди них — кандидаты и доктора наук, а также преподаватели с опытом работы в отрасли."
                         android:textSize="14sp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/text_light"
                         android:paddingTop="4dp"
                         tools:ignore="HardcodedText,VisualLintLongText" />
                 </LinearLayout>
@@ -338,7 +340,7 @@
                         android:text="Факт 10"
                         android:textStyle="bold"
                         android:textSize="16sp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/text_light"
                         tools:ignore="HardcodedText" />
 
                     <TextView
@@ -347,7 +349,7 @@
                         android:text="Свыше 20 образовательных программ.
 \nПрограммы по направлениям СПО и ВО, охватывающие ИТ, телеком, экономику и управление."
                         android:textSize="14sp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/text_light"
                         android:paddingTop="4dp"
                         tools:ignore="HardcodedText,VisualLintLongText" />
                 </LinearLayout>
@@ -367,7 +369,7 @@
                         android:text="Факт 11"
                         android:textStyle="bold"
                         android:textSize="16sp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/text_light"
                         tools:ignore="HardcodedText" />
 
                     <TextView
@@ -376,7 +378,7 @@
                         android:text="Более 1000 студентов.
 \nУчеба ведётся в очной, заочной и дистанционной формах."
                         android:textSize="14sp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/text_light"
                         android:paddingTop="4dp"
                         tools:ignore="HardcodedText,VisualLintLongText" />
                 </LinearLayout>
@@ -396,7 +398,7 @@
                         android:text="Факт 12"
                         android:textStyle="bold"
                         android:textSize="16sp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/text_light"
                         tools:ignore="HardcodedText" />
 
                     <TextView
@@ -405,7 +407,7 @@
                         android:text="Высокий процент трудоустройства выпускников.
 \nБолее 85% выпускников устраиваются по специальности в течение первого года после окончания."
                         android:textSize="14sp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/text_light"
                         android:paddingTop="4dp"
                         tools:ignore="HardcodedText,VisualLintLongText" />
                 </LinearLayout>
@@ -419,14 +421,15 @@
             android:id="@+id/footerLayout"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:background="#FFFFFF"
+            android:background="@color/header_footer_light"
             app:layout_constraintBottom_toBottomOf="parent">
 
             <ImageView
                 android:id="@+id/icon1"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_home"
+                android:src="@drawable/ic_home1"
+                app:tint="@color/text_light"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/icon2"
                 app:layout_constraintStart_toStartOf="parent"
@@ -439,7 +442,8 @@
                 android:id="@+id/icon2"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_calendar"
+                android:src="@drawable/ic_calendar1"
+                app:tint="@color/text_light"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/icon3"
                 app:layout_constraintStart_toEndOf="@+id/icon1"
@@ -451,7 +455,8 @@
                 android:id="@+id/icon3"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_map"
+                android:src="@drawable/ic_map1"
+                app:tint="@color/text_light"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/icon4"
                 app:layout_constraintStart_toEndOf="@+id/icon2"
@@ -463,7 +468,8 @@
                 android:id="@+id/icon4"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_settings"
+                android:src="@drawable/ic_settings1"
+                app:tint="@color/text_light"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/icon3"
