--- a/app/src/main/res/layout/settings_theme_selection.xml
+++ b/app/src/main/res/layout/settings_theme_selection.xml
@@ -12,7 +12,7 @@
         android:id="@+id/headerLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FFFFFF"
+        android:background="@color/header_footer_light"
         android:padding="16dp"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Выбор темы"
-            android:textColor="@android:color/black"
+            android:textColor="@color/text_light"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -48,6 +48,7 @@
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@color/background_light"
         app:layout_constraintTop_toBottomOf="@id/headerLayout"
         app:layout_constraintBottom_toTopOf="@id/footerLayout"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,6 +57,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/background_light"
             android:orientation="vertical"
             android:padding="16dp">
 
@@ -64,6 +66,7 @@
                 android:id="@+id/cardLight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:cardBackgroundColor="@color/card_light"
                 android:layout_margin="16dp"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp">
@@ -79,7 +82,7 @@
                         android:layout_height="wrap_content"
                         android:text="Светлая тема"
                         android:textSize="16sp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/text_light"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -92,6 +95,7 @@
                 android:id="@+id/cardDark"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:cardBackgroundColor="@color/card_light"
                 android:layout_margin="16dp"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp">
@@ -107,7 +111,7 @@
                         android:layout_height="wrap_content"
                         android:text="Тёмная тема"
                         android:textSize="16sp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/text_light"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -120,6 +124,7 @@
                 android:id="@+id/cardSystem"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:cardBackgroundColor="@color/card_light"
                 android:layout_margin="16dp"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp">
@@ -135,7 +140,7 @@
                         android:layout_height="wrap_content"
                         android:text="Системная тема"
                         android:textSize="16sp"
-                        android:textColor="@android:color/black"
+                        android:textColor="@color/text_light"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -150,14 +155,15 @@
         android:id="@+id/footerLayout"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="#FFFFFF"
+        android:background="@color/header_footer_light"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <ImageView
             android:id="@+id/icon1"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/ic_home"
+            android:src="@drawable/ic_home1"
+            app:tint="@color/text_light"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/icon2"
             app:layout_constraintStart_toStartOf="parent"
@@ -170,7 +176,8 @@
             android:id="@+id/icon2"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/ic_calendar"
+            android:src="@drawable/ic_calendar1"
+            app:tint="@color/text_light"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/icon3"
             app:layout_constraintStart_toEndOf="@+id/icon1"
@@ -182,7 +189,8 @@
             android:id="@+id/icon3"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/ic_map"
+            android:src="@drawable/ic_map1"
+            app:tint="@color/text_light"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/icon4"
             app:layout_constraintStart_toEndOf="@+id/icon2"
@@ -194,7 +202,8 @@
             android:id="@+id/icon4"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/ic_settings"
+            android:src="@drawable/ic_settings1"
+            app:tint="@color/text_light"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/icon3"
