--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,29 @@
     <color name="colorOnPrimaryLight">#FFFFFF</color>
     <color name="colorPrimaryDark">#121212</color>
     <color name="colorOnPrimaryDark">#FFFFFF</color>
+    <color name="colorPrimary">#6200EE</color>
+    <color name="colorOnPrimary">#FFFFFF</color>
+    <color name="background">#FFFFFF</color>
+    <color name="textColor">#000000</color>
+
+    <color name="colorAccent">#03DAC6</color>
+
+    <color name="textPrimary">#000000</color>
+    <color name="textSecondary">#757575</color>
+
+    <color name="statusBarBackground">?attr/colorPrimaryDark</color>
+    <color name="navigationBarBackground">#FFFFFFFF</color>
+
+    <color name="background_light">#FFFFFF</color>
+    <color name="background_dark">#121212</color>
+
+    <color name="card_light">#F5F5F5</color>
+    <color name="card_dark">#1E1E1E</color>
+
+    <color name="text_light">#000000</color>
+    <color name="text_dark">#FFFFFF</color>
+
+    <color name="header_footer_light">#FFFFFF</color>
+    <color name="header_footer_dark">#1A1A1A</color>
+
 </resources>
